metadata/force-app/main/default/objects/CustomName_ZjpXL__c/CustomName_ZjpXL__c.object-meta.xml
<CustomObject>
    <description>Description_BCbbD</description>
    <label>CustomLabel_CmeIQ</label>
    <nameField>
        <label>CustomLabel_CmeIQ</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_CmeIQs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>