metadata/force-app/main/default/objects/CustomName_ZjpXL__c/fields/CustomField_BVJDf__c.field-meta.xml
<CustomField>
    <fullName>CustomField_BVJDf__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldzjUNg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>