metadata/force-app/main/default/objects/CustomName_ZjpXL__c/fields/CustomField_japFh__c.field-meta.xml
<CustomField>
    <fullName>CustomField_japFh__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldITfNp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>